# nih-plug

./: Cargo.toml  bundler.toml
.github/workflows/: build.yml  test.yml
nih_plug_xtask/src/: lib.rs
plugins/phase_analyzer/: Cargo.toml  IMPLEMENTATION.md  README.md
plugins/phase_analyzer/src/: editor.rs  lib.rs  phase_data.rs
plugins/phase_analyzer/src/correction/: allpass_cascade.rs  mod.rs  time_delay.rs
plugins/phase_analyzer/src/editor/: analyzer.rs  theme.css
plugins/phase_sync/: BENCHMARKS.md  Cargo.toml  IMPLEMENTATION_SUMMARY.md  OPTIMIZATION_RESULTS.md  README.md
plugins/phase_sync/benches/: bass_analyzer_benches.rs  integration_benches.rs  kick_detector_benches.rs  lookahead_buffer_benches.rs  phase_controller_benches.rs  phase_rotator_benches.rs  phase_sync_benchmarks.rs
plugins/phase_sync/src/: bass_analyzer.rs  editor.rs  kick_detector.rs  lib.rs  lookahead_buffer.rs  phase_controller.rs  phase_rotator.rs  visualization_data.rs
plugins/phase_sync/src/editor/: phase_meter.rs  waveform_view.rs
plugins/spectral_compressor/: Cargo.toml
plugins/spectral_compressor/src/: compressor_bank.rs  curve.rs
src/: buffer.rs  util.rs
src/buffer/: blocks.rs  samples.rs
src/params/: smoothing.rs
src/util/: stft.rs  window.rs
